# LiaScript_Image_Makro_Generator

./: README.md  config.yaml  pyproject.toml
.github/workflows/: ci.yml
src/liascript_img_makro_gen/: confighandler.py  create_makros.py  generate_makros.py  main.py  tools.py
tests/: test_config_handler.py  test_generate_makros.py  test_tools.py
