[project]
name = "liascript-img-makro-gen"
version = "0.1.0"
description = ""
authors = [
    {name = "Volker Goehler",email = "volker.goehler@informatik.tu-freiberg.de"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "liascript_img_makro_gen", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
